--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-ui-router": "~0.2.13",
     "foundation": "~5.5.1",
     "angular": "~1.3.4",
-    "angular-ui-grid": "~3.0.0-rc.20"
+    "angular-ui-grid": "~3.0.0-rc.20",
+    "fontawesome": "~4.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4",
