--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
   "name": "ssc",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.12.2",
+    "connect-livereload": "^0.5.3",
+    "cookie-parser": "^1.3.4",
+    "ejs": "^2.3.1",
+    "errorhandler": "^1.3.5",
+    "express": "^4.12.3",
+    "express-session": "^1.11.1",
+    "gulp-express": "^0.3.5",
+    "gulp-nodemon": "^2.0.2",
+    "method-override": "^2.3.2",
+    "morgan": "^1.5.2",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0"
+  },
   "scripts": {
     "test": "gulp test"
   },
