--- a/bower.json
+++ b/bower.json
@@ -12,9 +12,7 @@
     "foundation": "~5.5.1",
     "angular": "~1.3.4",
     "angular-ui-grid": "~3.0.0-rc.20",
-    "fontawesome": "~4.3.0",
-    //"foundation_tooltip": "./bower_components/foundation/js/foundation/foundation.tooltip.js",
-    //"foundation_topbar": "./bower_components/foundation/js/foundation/foundation.topbar.js"
+    "fontawesome": "~4.3.0"    
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4",
