--- a/bower.json
+++ b/bower.json
@@ -12,14 +12,16 @@
     "foundation": "~5.5.1",
     "angular": "~1.3.4",
     "angular-ui-grid": "~3.0.0-rc.20",
-    "fontawesome": "~4.3.0"    
+    "fontawesome": "~4.3.0",
+    "justgage": "*",
+    "raphael": "~2.1.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4",
-    "angular-ui-grid": "~3.0.0-rc.20"    
+    "angular-ui-grid": "~3.0.0-rc.20"
   },
   "resolutions": {
     "jquery": "~2.1.1",
-    "angular": "~1.3.4"    
+    "angular": "~1.3.4"
   }
 }
