--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "body-parser": "^1.12.2",
     "connect-livereload": "^0.5.3",
+    "connect-redis": "^2.2.0",
     "cookie-parser": "^1.3.4",
     "ejs": "^2.3.1",
     "errorhandler": "^1.3.5",
@@ -44,7 +45,7 @@
     "gulp-minify-html": "~0.1.7",
     "gulp-ng-annotate": "~0.5.2",
     "gulp-protractor": "~0.0.12",
-    "gulp-rename": "~1.2.0",    
+    "gulp-rename": "~1.2.0",
     "gulp-rev": "~3.0.1",
     "gulp-rev-replace": "~0.3.1",
     "gulp-sass": "~1.3.0",
